--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -33,14 +33,14 @@
                 <h3>About You</h3>
     
                 <!-- Name -->
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                     <i class="material-icons prefix">account_circle</i>
                     <input type="text" class="validate" placeholder="Your Name Here" id="userName">
                     <label for="userName">Name (Required)</label>
                 </div>
     
                 <!-- Photo -->
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                     <i class="material-icons prefix">picture_in_picture</i>
                     <input type="text" class="validate" placeholder="Photo Link Here" id="userPhoto">
                     <label for="userPhoto">Link to Photo Image (Required)</label>
