fixed bug where user gets most recent entry

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -186,7 +186,7 @@
 
         <!-- Modal -->
         <div id="modal1" class="modal">
-            <div class="modal-content">
+            <div class="modal-content center">
                 <h4>Your best match!</h4>
                 <h5 id="matchName"></h5>
                 <img id="matchImage" class="materialboxed responsive-img" src="">
