--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -202,6 +202,8 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 red-text text-darken-3">
+                    <a href="/" class="red-text">Home</a>
+                    <span> | </span>
                     <a href="/api/friends" class="red-text" target="_blank">Friends API</a>
                     <span> | </span>
                     <a href="https://github.com/gerarjon/FriendFinder" class="red-text" target="_blank">Github</a>
@@ -232,7 +234,7 @@
 
             if ($("#userName").val() === "" || $("#userPhoto").val() === "") {
                 isValid = false;
-            } else if ($("#question1").val() === "empty" || $("#question2").val() === "empty" || $("#question3").val() === "empty" || $("#question4").val() === "empty" || $("#question5").val() === "empty" || $("#question6").val() === "empty" || $("#question7").val() === "empty" || $("#question8").val() === "empty" || $("#question9").val() === "empty" || $("#question10").val() === "empty") {
+            } else if ($("#question1").val() === "" || $("#question2").val() === "" || $("#question3").val() === "" || $("#question4").val() === "" || $("#question5").val() === "" || $("#question6").val() === "" || $("#question7").val() === "" || $("#question8").val() === "" || $("#question9").val() === "" || $("#question10").val() === "") {
                 isValid = false;
             }
 
